--- a/Homepage.html
+++ b/Homepage.html
@@ -65,10 +65,10 @@
 
 	
 	  <p class="listheadings">Contact Info:<br>
-	  Work Email-<a class="emailLinks" href="mailto:nswilliams5@my.waketech.edu">nswilliams5@my.waketech.edu</a><br>Personal Email- <a class="emailLinks" href="mailto:nicwill28@gmail.com">nicwill28@gmail.com</a><br>Phone Number- 919-917-5331
+	  Work Email-<a class="emaillinks" href="mailto:nswilliams5@my.waketech.edu">nswilliams5@my.waketech.edu</a><br>Personal Email- <a class="emaillinks" href="mailto:nicwill28@gmail.com">nicwill28@gmail.com</a><br>Phone Number- 919-917-5331
 	</p>
 	<footer class="Footer"><center>Last Updated on:
-	  <!-- #BeginDate format:fcAm1 -->Tuesday, April 4, 2023<!-- #EndDate -->
+	  <!-- #BeginDate format:fcAm1 -->Tuesday, April 11, 2023<!-- #EndDate -->
 	</center></footer>
 
 </body>
