--- a/PersonalInterest.html
+++ b/PersonalInterest.html
@@ -22,7 +22,7 @@
 <nav class="navMenu">
   <ul>
     <li><a href="Homepage.html">Home</a></li>
-    <li><a href="Experince and Education.html">Expereince and education</a></li>
+    <li><a href="Experience and Education.html">Expereince and education</a></li>
     <li><a href="Projects.html">Projects</a></li>
     <li><a href="PersonalInterest.html">Personal Interest&nbsp;</a> &nbsp;</li>
   </ul>
@@ -38,7 +38,7 @@
 <p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum in aperiam voluptatibus, dolorem odit quos magnam voluptates hic, repellendus eos, velit vitae sint dolores nesciunt. Harum delectus deserunt inventore, quidem, doloribus ipsam animi fugiat voluptatibus soluta enim ratione culpa quae molestias. Necessitatibus eligendi possimus quibusdam consectetur sint illum iusto maiores?</p>
 	
 <footer class="Footer"><center>Last Updated on:
-	  <!-- #BeginDate format:fcAm1 -->Saturday, April 1, 2023<!-- #EndDate -->
+	  <!-- #BeginDate format:fcAm1 -->Monday, April 17, 2023<!-- #EndDate -->
 	</center></footer>
 
 </body>
