--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
 <nav class="navMenu">
   <ul>
     <li><a href="Homepage.html">Home</a></li>
-    <li><a href="Experince and Education.html">Experience and education</a></li>
+    <li><a href="Experience and Education.html">Experience and education</a></li>
     <li><a href="Projects.html">Projects</a></li>
     <li><a href="PersonalInterest.html">Personal Interest&nbsp;</a> &nbsp;</li>
   </ul>
@@ -25,7 +25,7 @@
 <p>
 
 <footer class="Footer"><center>Last Updated on:
-	  <!-- #BeginDate format:fcAm1 -->Saturday, April 1, 2023<!-- #EndDate -->
+	  <!-- #BeginDate format:fcAm1 -->Monday, April 17, 2023<!-- #EndDate -->
 	</center></footer>
 	
 
