--- a/PersonalInterest.html
+++ b/PersonalInterest.html
@@ -17,7 +17,7 @@
 	
 	<header>Personal Interest</header>
 
-<img src="assest/banner.jpg" width="100%" height="100" alt=""/></h3>
+	<div><img src="assest/banner.jpg" width="100%" height="100" alt=""/></div>
 
 <nav class="navMenu">
   <ul>
@@ -28,17 +28,17 @@
   </ul>
 </nav>
 
-<img src="assest/personalintIMG3.jpg" width="200" height="250" alt="" style= float:left;margin-right:10px;margin-bottom:5px/>
+<img class="imgIPtop" src="assest/personalintIMG3.jpg"  alt=""/>
 	
 	<p class="listheadings">Music and Soccer:</p>
 <p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A voluptatibus officiis quod quaerat aspernatur. Sequi ducimus, maiores, iste quaerat cupiditate, velit voluptatibus sunt sapiente facere cumque dolorum iusto perspiciatis illo explicabo natus et maxime corporis? Sunt in praesentium maiores necessitatibus soluta minima quo, placeat odio, nemo ipsa rerum aspernatur, at velit. Molestias eius, voluptate repellat minus, alias deserunt voluptas? Doloremque necessitatibus ea, ut est itaque! Numquam vel sint atque modi quisquam rem esse placeat, nam illo dicta aspernatur alias dolor nihil totam eum dignissimos aliquid, iure corporis voluptate consectetur. Hic nam nobis dolore, eaque, voluptate recusandae cupiditate! Velit eveniet cupiditate tenetur, accusantium minus consectetur fugit. Architecto autem repudiandae quibusdam beatae neque voluptas nostrum laboriosam aliquid aperiam optio, veniam inventore. Ipsum sequi ea molestiae. Ipsam iusto, sapiente aliquid. Minima saepe maiores voluptates, odio vero, cupiditate atque culpa, laudantium doloremque autem pariatur quia reprehenderit sed earum porro reiciendis maxime voluptas quis repellat!</p>
-<img src="assest/personalIntIMG1.jpg" width="200" height="250" alt="" style= float:right;margin-right:10px;margin-bottom:5px/>
+<div><img class="imgIPbot" src="assest/personalIntIMG1.jpg" alt=""></div>
 <p class="listheadings">Other Interest</p>	
 	
 <p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum in aperiam voluptatibus, dolorem odit quos magnam voluptates hic, repellendus eos, velit vitae sint dolores nesciunt. Harum delectus deserunt inventore, quidem, doloribus ipsam animi fugiat voluptatibus soluta enim ratione culpa quae molestias. Necessitatibus eligendi possimus quibusdam consectetur sint illum iusto maiores?</p>
 	
 <footer class="Footer"><center>Last Updated on:
-	  <!-- #BeginDate format:fcAm1 -->Monday, April 17, 2023<!-- #EndDate -->
+	  <!-- #BeginDate format:fcAm1 -->Friday, April 21, 2023<!-- #EndDate -->
 	</center></footer>
 
 </body>
