--- a/Homepage.html
+++ b/Homepage.html
@@ -26,11 +26,11 @@
   </ul>
 </nav>
 	
-<img src="assest/OlderMePic.jpeg" width="200" height="250" alt="" style= float:left;margin-right:10px;margin-bottom:5px/>
+<img src="assest/OlderMePic.jpeg" alt="" class="ImgHomeTop"/>
 	
 <p class="listheadings">About me:</p>	
 <p class="textfting"></p>
-	<img src="assest/homepageimg2.png" width="200" height="250" alt="" style=float:right;margin-left:10px;margin-bottom:5px/>
+	<img src="assest/homepageimg2.png" alt="" class="ImgHpBot"/>
 	
 
 	<p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe fuga impedit eveniet maiores debitis, eius praesentium, quibusdam facere minima. Facilis maiores omnis voluptates, blanditiis quasi provident consequatur veniam asperiores veritatis dolor, vitae animi fuga. Minus possimus perferendis nam tenetur mollitia iusto in incidunt ad beatae, temporibus eos atque praesentium facilis voluptatum, quod doloribus. Minus sed consequatur aliquid non nobis voluptas eligendi nihil animi repellat explicabo tenetur, incidunt molestias perspiciatis maxime excepturi, at sequi, dolor odio impedit corporis. Blanditiis rem, ipsa minus hic sequi, laboriosam nulla dicta aut, molestias sit nesciunt facilis et quod debitis perspiciatis, saepe animi nemo. Corporis labore neque laudantium accusamus, quam incidunt quia quidem, quisquam culpa magni amet necessitatibus magnam aspernatur autem ea, odio fuga perferendis alias nam maxime. Ab iure asperiores quaerat adipisci eum! Odit nemo numquam perferendis, ipsam fuga labore eos fugit tempora quaerat rerum aspernatur dolor eligendi porro nihil, iste ipsa veritatis debitis minima nostrum velit laudantium aut architecto. Laborum consequuntur ducimus ullam, cumque assumenda sint est? Sit at error ex iste sed explicabo excepturi dignissimos, quaerat doloribus blanditiis. Aperiam soluta alias, minima quisquam nobis nisi perferendis nemo molestiae fugit reiciendis dolorum architecto repellendus asperiores aliquam quidem! Voluptate sunt ipsam natus veniam aliquid   
