Update About Me
Removed Lorem Ipsum and added actual wording

--- a/Homepage.html
+++ b/Homepage.html
@@ -33,7 +33,7 @@
 	<img src="assest/homepageimg2.png" alt="" class="ImgHpBot"/>
 	
 
-	<p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe fuga impedit eveniet maiores debitis, eius praesentium, quibusdam facere minima. Facilis maiores omnis voluptates, blanditiis quasi provident consequatur veniam asperiores veritatis dolor, vitae animi fuga. Minus possimus perferendis nam tenetur mollitia iusto in incidunt ad beatae, temporibus eos atque praesentium facilis voluptatum, quod doloribus. Minus sed consequatur aliquid non nobis voluptas eligendi nihil animi repellat explicabo tenetur, incidunt molestias perspiciatis maxime excepturi, at sequi, dolor odio impedit corporis. Blanditiis rem, ipsa minus hic sequi, laboriosam nulla dicta aut, molestias sit nesciunt facilis et quod debitis perspiciatis, saepe animi nemo. Corporis labore neque laudantium accusamus, quam incidunt quia quidem, quisquam culpa magni amet necessitatibus magnam aspernatur autem ea, odio fuga perferendis alias nam maxime. Ab iure asperiores quaerat adipisci eum! Odit nemo numquam perferendis, ipsam fuga labore eos fugit tempora quaerat rerum aspernatur dolor eligendi porro nihil, iste ipsa veritatis debitis minima nostrum velit laudantium aut architecto. Laborum consequuntur ducimus ullam, cumque assumenda sint est? Sit at error ex iste sed explicabo excepturi dignissimos, quaerat doloribus blanditiis. Aperiam soluta alias, minima quisquam nobis nisi perferendis nemo molestiae fugit reiciendis dolorum architecto repellendus asperiores aliquam quidem! Voluptate sunt ipsam natus veniam aliquid   
+	<p class="textfting">My name is Nicholas Sergio Williams, I just completed my first semester at Wake Tech Community College and plan to transfer to a four-year University after getting my Associates in Science. My end goal is a degree in a Computer Science field or Networking/Cybersecurity Field. I was born In Cary North Carolina, but lived in Italy for a good part of my childhood. My mother was born in Italy and my family lives and works in a coastal city called Genoa which is found in the northern province of Liguria. I now live in Apex North Carolina with my parents. I spend most my time with my golden retriever Beamer, I love bringing him to the lake and going on swims together. I also spend lots of my time playing soccer and hanging out with my friends. I love programming It’s one of my favorite things to learn, so please enjoy this website I made for my personal portfolio!
 	</p>
 	<form id="ViewerInfo" action="#" method="get">
 	<fieldset id="ContactMe">
@@ -69,7 +69,7 @@
 	  Work Email-<a class="emaillinks" href="mailto:nswilliams5@my.waketech.edu">nswilliams5@my.waketech.edu</a><br>Personal Email- <a class="emaillinks" href="mailto:nicwill28@gmail.com">nicwill28@gmail.com</a><br>Phone Number- 919-917-5331
 	</p>
 	<footer class="Footer"><center>Last Updated on:
-	  <!-- #BeginDate format:fcAm1 -->Friday, April 21, 2023<!-- #EndDate -->
+	  <!-- #BeginDate format:fcAm1 -->Thursday, May 4, 2023<!-- #EndDate -->
 	</center></footer>
 
 </body>
