--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
     <li><a href="PersonalInterest.html">Personal Interest&nbsp;</a> &nbsp;</li>
   </ul>
 </nav>
-<p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus nobis saepe ratione, dolore nemo dicta sed praesentium ab perferendis aliquid explicabo illo quo aspernatur temporibus repellendus possimus pariatur animi odio.</p>
 
 <footer class="Footer"><center>Last Updated on:
 	  <!-- #BeginDate format:fcAm1 -->Monday, April 17, 2023<!-- #EndDate -->
