Update Alt text
Added alt text on four images on the Homepage, Experience and Education, and Personal Interest pages

--- a/Experience and Education.html
+++ b/Experience and Education.html
@@ -16,7 +16,7 @@
 <body>
 	
 	<header>Experience and Education</header>
-<img src="assest/banner.jpg" width=100% height="100" alt=""/></h3>
+<img src="assest/banner.jpg" width=100% height="100" alt="banner"/></h3>
 
 
 <nav class="navMenu">
