--- a/Homepage.html
+++ b/Homepage.html
@@ -15,7 +15,7 @@
 <meta name="keywords" content="nicholas sergio williams portfolio resume experince and education projects personal interest contanct info">
 <meta name="description" content="Nicholas Sergio Williams' Portfolio is a website meant to inform viewers of Nicholas' past jobs, projects, and personal interest.">
 	<header>Nicholas Sergio Williams</header>
-<div><img src="assest/banner.jpg" width=100% height="100" alt=""/></div>
+<div><img src="assest/banner.jpg" width=100% height="100" alt="banner"/></div>
 	
 <nav class="navMenu">
   <ul>
@@ -26,11 +26,11 @@
   </ul>
 </nav>
 	
-<img src="assest/OlderMePic.jpeg" alt="" class="ImgHomeTop"/>
+<img src="assest/OlderMePic.jpeg" alt="An image of present me" class="ImgHomeTop"/>
 	
 <p class="listheadings">About me:</p>	
 <p class="textfting"></p>
-	<img src="assest/homepageimg2.png" alt="" class="ImgHpBot"/>
+	<img src="assest/homepageimg2.png" alt="An image of younger me" class="ImgHpBot"/>
 	
 
 	<p class="textfting">My name is Nicholas Sergio Williams, I just completed my first semester at Wake Tech Community College and plan to transfer to a four-year University after getting my Associates in Science. My end goal is a degree in a Computer Science field or Networking/Cybersecurity Field. I was born In Cary North Carolina, but lived in Italy for a good part of my childhood. My mother was born in Italy and my family lives and works in a coastal city called Genoa which is found in the northern province of Liguria. I now live in Apex North Carolina with my parents. I spend most my time with my golden retriever Beamer, I love bringing him to the lake and going on swims together. I also spend lots of my time playing soccer and hanging out with my friends. I love programming It’s one of my favorite things to learn, so please enjoy this website I made for my personal portfolio!
