--- a/PersonalInterest.html
+++ b/PersonalInterest.html
@@ -28,12 +28,12 @@
   </ul>
 </nav>
 
-<img class="imgIPtop" src="assest/personalintIMG3.jpg"  alt=""/>
+<img class="imgIPtop" src="assest/personalintIMG3.jpg"  alt="Image of Led Zeppelin"/>
 	
 	<p class="listheadings">Music and Soccer:</p>
 <p class="textfting">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A voluptatibus officiis quod quaerat aspernatur. Sequi ducimus, maiores, iste quaerat cupiditate, velit voluptatibus sunt sapiente facere cumque dolorum iusto perspiciatis illo explicabo natus et maxime corporis? Sunt in praesentium maiores necessitatibus soluta minima quo, placeat odio, nemo ipsa rerum aspernatur, at velit. Molestias eius, voluptate repellat minus, alias deserunt voluptas? Doloremque necessitatibus ea, ut est itaque! Numquam vel sint atque modi quisquam rem esse placeat, nam illo dicta aspernatur alias dolor nihil totam eum dignissimos aliquid, iure corporis voluptate consectetur. Hic nam nobis dolore, eaque, voluptate recusandae cupiditate! Velit eveniet cupiditate tenetur, accusantium minus consectetur fugit. Architecto autem repudiandae quibusdam beatae neque voluptas nostrum laboriosam aliquid aperiam optio, veniam inventore. Ipsum sequi ea molestiae. Ipsam iusto, sapiente aliquid. Minima saepe maiores voluptates, odio vero, cupiditate atque culpa, laudantium doloremque autem pariatur quia reprehenderit sed earum porro reiciendis maxime voluptas quis repellat!</p>
 	
-<div><img class="imgIPbot" src="assest/personalIntIMG1.jpg" alt=""></div>
+<div><img class="imgIPbot" src="assest/personalIntIMG1.jpg" alt="Image of Soccer ball"></div>
 
 	<p class="listheadings">Other Interest</p>	
 	
